<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EnRu</string>
    <string name="hello_world">Hello world!</string>

	<string name="index_not_found">Index not found.</string>
	<string name="query_index_dictionary">Reindex dictionary?</string>

	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="ok">Ok</string>

	<string name="text">Text:</string>
	<string name="translation">Translation:</string>
	
	<string name="exit">Don\'t save</string>
	<string name="cancel">Cancel</string>

	<string name="search">Search</string>

	<string name="action_select_dic">Select dictionary</string>
	<string name="action_tree">Tree</string>
	<string name="action_copy_tree">Copy tree</string>
	<string name="action_reindex">Reindex</string>
	
	<string name="action_dictionary">Dictionary</string>
	<string name="action_add_group">Add group</string>
	<string name="action_add_item_from_list">Add L</string>
	<string name="action_add_item">Add</string>
	
	<string name="action_edit">Edit</string>
	<string name="action_info">Info</string>
	<string name="action_choose">Choose</string>
	<string name="action_add">Add</string>
	<string name="action_save">Save</string>
	<string name="action_delete">Delete</string>
	<string name="action_cut">Cut</string>
		<string name="action_paste">Paste</string>
		<string name="action_edit1">Edit1</string>
		<string name="action_test">Test</string>
					<string name="button_test">Control</string>
	<string name="action_remember">Remember</string>
	<string name="action_find">Find</string>
	<string name="find">Find text</string>
		
	<string name="action_copy">Copy</string>
			
    <string name="error_saving_file">Error saving file</string>
    <string name="error_load_xml">Error loading xml</string>

    <string name="action_switch">Switch</string>

    <string name="dialog_select_text">Select test</string>
    		
    <string name="tree_was_changed">Tree was changed</string>
    <string name="save_tree_before_exit">Save tree before exit?</string>
	<string name="query_delete">Delete</string>
	<string name="are_you_shure">Are you shure?</string>
	<string name="query_copy_tree">Replace current tree</string>
	
	<string name="expressions">Expressions</string>
	
	<string name="button_next">Next</string>
	
	<string name="testCompleted">Test completed</string>
	<string name="askRepeat">Repeat?</string>
	
	
</resources>
