<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alexmochalov.enru.MainActivity" >
    
    <item
        android:id="@+id/action_choose"
        android:orderInCategory="3"
        android:title="@string/action_choose" 
        android:showAsAction="always"/>
    

    <item
        android:id="@+id/action_select_dic"
        android:orderInCategory="3"
        android:title="@string/action_select_dic"/>
    
    <item
        android:id="@+id/action_tree"
        android:orderInCategory="3"
        android:icon="@drawable/tree"
        android:title="@string/action_tree" 
        android:showAsAction="always"/>
    
	
    <item
        android:id="@+id/action_test"
        android:orderInCategory="5"
        android:icon="@drawable/test1"
        android:title="@string/action_test" 
        android:showAsAction="always"/>
    
    <item
        android:id="@+id/action_reindex"
        android:orderInCategory="3"
        android:title="@string/action_reindex"/>
    
    
    <item
        android:id="@+id/action_info"
        android:orderInCategory="4"
        android:title="@string/action_info" 
        android:showAsAction="never"/>
    

</menu>
