<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.alexmochalov.enru.MainActivity" >
    
    <item
        android:id="@+id/action_add_item"
        android:orderInCategory="10"
        android:title="@string/action_add_item" 
     android:showAsAction="always"/>
    
    <item
        android:id="@+id/action_add_group"
        android:orderInCategory="11"
        android:title="@string/action_add_group" 
     android:showAsAction="always"/>
    
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="11"
        android:title="@string/action_edit" 
     android:showAsAction="always"/>
    
    <item
        android:id="@+id/action_dictionary"
        android:orderInCategory="20"
        android:title="@string/action_dictionary" android:showAsAction="always"/>
    
    
    

</menu>
