<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/ltMain"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    android:layout_weight="10"
	    android:orientation="vertical" >

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:orientation="horizontal"
	        android:paddingLeft="@dimen/text_size_medium" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/text"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <EditText
	            android:id="@+id/etText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10" >

	            <requestFocus />
	        </EditText>
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.5"
	        android:orientation="horizontal"
	        android:paddingLeft="@dimen/text_size_medium" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/translation"
	            android:textAppearance="?android:attr/textAppearanceLarge" />

	        <EditText
	            android:id="@+id/etTranslation"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10" />
	    </LinearLayout>
	</LinearLayout>

	<LinearLayout
	    style="?android:attr/buttonBarStyle"
	    android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:layout_weight="0.9"
	    android:orientation="horizontal" >

		<Button
			android:layout_height="wrap_content"
			android:text="@string/ok"
			android:id="@+id/btnOk"
			android:layout_weight="0.5"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="fill_parent"/>

		<Button
			android:layout_height="wrap_content"
			android:text="@string/cancel"
			android:id="@+id/btnCancel"
			android:layout_weight="0.5"
			style="?android:attr/buttonBarButtonStyle"
			android:layout_width="fill_parent"/>

	</LinearLayout>

</LinearLayout>

